--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "classnames": "^2.2.5",
     "commander": "^2.15.1",
     "consolidate": "^0.10.0",
     "css-loader": "0.28.7",
@@ -47,15 +48,19 @@
     "metalsmith": "^2.3.0",
     "mobx": "^4.0.2",
     "mobx-react": "^5.0.0",
+    "moment": "^2.22.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
+    "react-container-query": "^0.11.0",
     "react-dev-utils": "^5.0.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "single-spa-react": "^2.2.0",
     "style-loader": "0.19.0",
