--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "jest": "20.0.4",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
+    "lodash": "^4.17.10",
+    "lodash-decorators": "^5.0.0",
     "lotusjs-util": "^1.0.4",
     "metalsmith": "^2.3.0",
     "mobx": "^4.0.2",
@@ -130,7 +132,7 @@
     "store": "/bidding-procurement-admin/store.js"
   },
   "devDependencies": {},
-  "theme":"./src/theme.js",
+  "theme": "./src/theme.js",
   "_from": "lotus-scaffold-micro-react@0.1.25",
   "_resolved": "http://registry.npm.taobao.org/lotus-scaffold-micro-react/download/lotus-scaffold-micro-react-0.1.25.tgz"
 }
