--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
     "babel-plugin-import": "^1.7.0",
+    "babel-plugin-react-css-modules": "^3.4.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-mobx": "^1.0.2",
     "babel-preset-react-app": "^3.1.1",
@@ -126,7 +127,7 @@
     "extends": "react-app"
   },
   "registerConfig": {
-    "name": "bidding-procurement-admin",
+    "name": "bidding-procurement-admin-base",
     "prefix": "/bidding-procurement-admin/",
     "main": "/bidding-procurement-admin/main.js",
     "store": "/bidding-procurement-admin/store.js"
